Fix histogram name mismatch for GPU.Error_TexImage*

BUG=625627
TBR=piman@chromium.org
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel;tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2123493002
Cr-Commit-Position: refs/heads/master@{#403686}

Former-commit-id: c00caa1e85fdd9cbbad3df3323ba5908b42ca6a3